--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -35,29 +35,13 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our History</h2>
                     <p class="text-center">
-                        Established in 1999 Mandeville joinery has produced fine furniture, architectural joinery and undertaken
-                        restoration projects, we have always prided ourselves on balancing traditional techniques with modern design.
-                        From timber frame construction to designing and making contemporary furniture, Mandeville joinery has the skills
-                        and resources to see your project from idea, through design to manufacture and installation.
+                        Established in 1999, Mandeville Joinery has produced fine furniture, architectural joinery and
+                        undertaken restoration projects for customers all over England. We have always prided
+                        ourselves on balancing traditional techniques with modern design. From timber frame
+                        construction to designing and making contemporary furniture, Mandeville Joinery has the
+                        skills and resources to see your project from idea, through design to manufacture and
+                        installation.
                     </p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img1.jpg")" alt="An image of woodwork in our workshop">
-                </div>
-                <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img2.jpg")" alt="An image of woodwork in our workshop">
-                </div>
-                <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img3.jpg")" alt="An image of woodwork in our workshop">
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img4.jpg")" alt="An image of woodwork in our workshop">
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img5.jpg")" alt="An image of woodwork in our workshop">
                 </div>
             </div>
 
@@ -151,7 +135,10 @@
                         <div class="mdv-card-content">
                             <h4>Duncan</h4>
                             <h6 class="category text-muted">Senior Wood Specialist</h6>
-                            <p class="text-muted">Turning designs into beautiful, well-oiled reality.</p>
+                            <p class="text-muted">
+                                Duncan is the backbone to Mandeville and has been turning designs into beautiful, 
+                                well-oiled reality for many years.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -177,7 +164,10 @@
                         <div class="mdv-card-content">
                             <h4>Niall</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
-                            <p class="text-muted">Turning designs into beautiful, well-oiled reality.</p>
+                            <p class="text-muted">
+                                Niall is our newest member but has settled in perfectly to team Mandeville. 
+                                When he’s not producing beautiful woodwork he’s chasing a football somewhere!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -190,7 +180,10 @@
                         <div class="mdv-card-content">
                             <h4>Jake</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
-                            <p class="text-muted">Turning designs into beautiful, well-oiled reality.</p>
+                            <p class="text-muted">
+                                Jake has been part of the Mandeville family since he was 17. He’s progressed from his
+                                apprenticeship to become one of our most trusted wood specialists.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -202,8 +195,11 @@
 
                         <div class="mdv-card-content">
                             <h4>Morgan</h4>
-                            <h6 class="category text-muted">Wood Specialist</h6>
-                            <p class="text-muted">Turning designs into beautiful, well-oiled reality.</p>
+                            <h6 class="category text-muted">Padawan Wood Specialist</h6>
+                            <p class="text-muted">
+                                Morgan is currently working through his apprenticeship with Mandeville but has already 
+                                shown great potential and we look forward to him progressing further alongside us.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -216,7 +212,10 @@
                         <div class="mdv-card-content">
                             <h4>Jack</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
-                            <p class="text-muted">Turning designs into beautiful, well-oiled reality.</p>
+                            <p class="text-muted">
+                                Jack has worked alongside Mandeville for the last 5 years. His work rate is second to
+                                none and we’re always delighted with his results.
+                            </p>
                         </div>
                     </div>
                 </div>
