--- a/src/MandevilleJoinery.Web/Views/Home/Index.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/Index.cshtml
@@ -31,8 +31,10 @@
                     <img src="@Url.Content("~/images/logo.png")" style="display:block; margin:auto;" />
                     <h1 class="text-center">Welcome to Mandeville Joinery</h1>
                     <p class="lead text-center mdv-paragraph-header">
-                        We are Mandeville Joinery. We produce fine quality, bespoke English woodwork for any project, large or small, 
-                        from design to delivery or anywhere inbetween. Whatever your concept, Mandeville can meet your needs.
+                        Producers of fine quality bespoke English woodwork. Whatever your concept, from fine
+                        furniture to green oak housing, through design to delivery, we will meet your needs. Priding
+                        ourselves on our sustainable values, we balance traditional techniques with modern design to
+                        create products you will be proud to own.
                     </p>
                 </div>
             </div>
@@ -41,10 +43,9 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our Values</h2>
                     <p class="text-center">
-                        We pride ourselves on our sustainable values, using local materials where possible. We balance traditional 
-                        techniques with modern design and are highly regarded by our past customers. We offer a professional service 
-                        with a personal touch and can assist with all stages of the project lifecycle; from idea, to design, to 
-                        manufacture and installation.
+                        We pride ourselves on our sustainable values, using local materials where possible. We offer
+                        a professional service with a personal touch and can assist with all stages of the project
+                        lifecycle; from idea, to design, to manufacture and installation.
                     </p>
                 </div>
                 
