fixed css issue with the about us cards

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -94,12 +94,14 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our Team</h2>
                     <p class="text-center">
-                        We like to think of ourselves as a little different to your average business in our sector which is driven 
-                        by our unique team of forward thinking, like minded individuals who work to the same high standards and 
+                        We like to think of ourselves as a little different to your average business in our sector which is driven
+                        by our unique team of forward thinking, like minded individuals who work to the same high standards and
                         share a common love of all things wood.
                     </p>
                 </div>
+            </div>
                 
+            <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <div class="mdv-card">
                         <div class="mdv-card-avatar">
@@ -136,8 +138,7 @@
                             <h4>Duncan</h4>
                             <h6 class="category text-muted">Senior Wood Specialist</h6>
                             <p class="text-muted">
-                                Duncan is the backbone to Mandeville and has been turning designs into beautiful, 
-                                well-oiled reality for many years.
+                                Duncan is the backbone to Mandeville and has been turning designs into beautiful, well-oiled reality for many years.
                             </p>
                         </div>
                     </div>
@@ -219,7 +220,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6 col-md-6">
                     <div class="mdv-card">
                         <div class="mdv-card-avatar">
                             <img class="img" src="@Url.Content("~/images/aboutus-chuggy.jpg")">
@@ -232,7 +233,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6 col-md-6">
                     <div class="mdv-card">
                         <div class="mdv-card-avatar">
                             <img class="img" src="@Url.Content("~/images/aboutus-boots.jpg")">
