added slider for customer testimonials

--- a/src/MandevilleJoinery.Web/Views/Home/Index.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/Index.cshtml
@@ -79,6 +79,92 @@
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
+                    <h2 class="text-center">This is What Our Customers Have to Say</h2>
+                    @*<div id="mdv-slider-controls">
+                        <a href="#" class="mdv-slider-control-next">></a>
+                        <a href="#" class="mdv-slider-control-prev"><</a>
+                    </div>*@
+                    <div id="mdv-slider">                        
+                        <ul>
+                            <li>
+                                “After spending many years as an interior designer, working with a European client base and
+                                more recently an independent property developer; I have had the good fortune to employ
+                                Mandeville Joinery on several occasions. It is not easy to find &quot;True Artisans&quot; in the joinery
+                                and cabinet making industry, people who can follow a vision, and technically support (new)
+                                ideas whilst enhancing traditional methods. Their attention to detail and approachable service
+                                with realistic pricing has undoubtedly been key factors to an on-going working relationship
+                                which has been established since 2002. I would have no problem in recommending, a forward
+                                thinking company such as Mandeville Joinery.”
+                                <br /><br />
+                                Mr S - Beaminster
+                            </li>
+                            <li>
+                                “I have been a client of Mandeville Joinery for over two years during which time I have
+                                commissioned two complete bespoke kitchens and a number of other items including oak
+                                doors and oak panelling to match some existing 19c panelling.  Consequently, my experience
+                                of the work they have to offer has been very wide. I can sincerely say that the degree of their
+                                craftsmanship has been exemplary and the quality of the materials used for the work I have
+                                had done have been of the highest order.  I have found the team at Mandeville Joinery
+                                friendly, thoughtful and helpful to accommodate my own ideas for design with patience and
+                                enthusiasm.  I have no hesitation in recommending the firm for quality and finish.”
+                                <br /><br />
+                                Dr D – Powerstock
+                            </li>
+                            <li>
+                                “I can certainly recommend Mandeville Joinery for their craftsmanship and also their design
+                                input. We should be more than happy to show any potential clients the three different jobs
+                                that Mandeville have completed at our house near Bridport.”
+                                <br /><br />
+                                Mr T- Netherbury
+                            </li>
+                            <li>
+                                “Mandeville Joinery have done various jobs for me over the last few years. Their measuring
+                                is meticulous and their joinery work of a high standard. I have been very happy with the jobs
+                                they have done for me and would strongly recommend them to anyone needing joinery work;
+                                they are very pleasant to work with.”
+                                <br /><br />
+                                Mrs B – Piddlehinton
+                            </li>
+                            <li>
+                                “We have used Mandeville Joinery for numerous jobs throughout our house; these include
+                                oak skirting in the kitchen, an oak cabinet in the bathroom and a ballet barre in the dance
+                                studio. Each item has been beautifully made and fitted with care. Everyone at Mandeville is
+                                friendly and helpful and quotes are quickly produced and emailed over. I would definitely use
+                                Mandeville again and have already recommended them to many friends.”
+                                <br /><br />
+                                Mrs C – Wimborne
+                            </li>
+                            <li>
+                                “I cannot recommend Mandeville Joinery enough. Their service was flawless on so many
+                                levels. The staff were professional and courteous, the bed is beautiful and unique and the
+                                price was extremely reasonable. Thanks for your service, I will be in touch soon!”
+                                <br /><br />
+                                Mr C – Maiden Newton
+                            </li>
+                            <li>
+                                “Very happy, have used them several time, fantastic carpenters who do an outstanding job.”
+                                <br /><br />
+                                Mr W - Dorchester
+                            </li>
+                            <li>
+                                “I would definitely use them again, the service was excellent and workmanship was brilliant.
+                                I would highly recommend them.”
+                                <br /><br />
+                                Mr Masters
+                            </li>
+                            <li>
+                                “Mandeville Joinery is a young and forward thinking company, able to provide high quality
+                                traditional work with contemporary style. All this at competitive prices.”
+                                <br /><br />
+                                Mr Stone
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Get in Touch</h2>
                     <p class="text-center">
                         Contact us today for a free no obligation quote. We will offer a genuine opinion on the needs of your project 
