--- a/src/MandevilleJoinery.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
         <script src="@Url.Content("~/lib/bootstrap-material-design/dist/js/material.js")"></script>
         <script src="@Url.Content("~/lib/bootstrap-material-design/dist/js/ripples.js")"></script>
         <script src="@Url.Content("~/js/site.js")"></script>
+        <script src="@Url.Content("~/js/slider.js")"></script>
     </environment>
 
     <environment names="Staging,Production">
